--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "ts-node": "^10.9.1",
