--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "nodemon": "^2.0.22",
     "rimraf": "^5.0.1",
     "tsconfig-paths": "^4.2.0"
+  },
+  "engines": {
+    "node": "16.16.0"
   }
 }
