--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && node dist/index.js",
-    "build": "rimraf dist && tsc",
-    "dev": "nodemon"
+    "dev": "ts-node-dev ./src/index.ts",
+    "start": "tsc && node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,15 +17,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22",
-    "rimraf": "^5.0.1",
-    "tsconfig-paths": "^4.2.0"
   },
   "engines": {
     "node": "16.16.0"
+  },
+  "devDependencies": {
+    "ts-node-dev": "^2.0.0"
   }
 }
